--- a/assets/style.css
+++ b/assets/style.css
@@ -91,7 +91,7 @@ header nav a:not(:last-child) {
 
 figure {
     display: flex;
-    justify-content: center;
+    justify-content: right;
     margin: 0px 0 35px;
     background-image: url(./images/background2.jpg);
     background-repeat: no-repeat;
@@ -100,7 +100,7 @@ figure {
 
 figure .dog-image {
     max-width: 20%;
-    margin-right: 15px;
+    margin-right: 50px;
     border: 5px solid #222;
     border-radius: 10px;
     overflow: hidden;
@@ -109,6 +109,7 @@ figure .dog-image {
 figure .dog-text {
     /* flex: 2; */
     display: flex;
+    margin-right: 70px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -120,11 +121,22 @@ figure .dog-text h1 {
 }
 
 h1.work-title {
-    padding: 0 3%;
+    padding: 0 6%;
+    font-size: 300%;
 }
 
+article {
+    padding: 0 6%;
+    text-align: center;
+}
+
+article section {
+    font-size: 150%;
+}
+
+
 main {
-    padding: 0 3%;
+    padding: 0 6%;
     flex: 1;
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -134,22 +146,70 @@ main {
 main section {
     padding: 5px;
     /* margin: 8px 0; */
-    background-color: aqua;
+    position: relative;
 }
 
-main section:nth-child(odd) {
-    background-color: bisque;
+main section img {
+    max-width: 60%;
+    border: 5px solid #222;
+    border-radius: 5px;
 }
 
 main section.main-section {
     grid-column: 1/3;
     padding: 30px 15px;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    align-items: center;
 }
 
-main section img:first-child {
-    max-width: 10%;
+main section.main-section img {
+    max-width: 60%;
+    border: 5px solid #222;
+    border-radius: 5px;
+    justify-content: center;
+    align-items: center;
+}
+
+main h2.first-work {
+    position: absolute;
+    align-self: end;
+    font-size: 300%;
+    background-color: rgb(208, 226, 250);
+    border: 5px solid #222;
+    border-radius: 5px;
+}
+
+main section.even-section {
+    display: flex;
+    align-items: center;
+    justify-content: right;
+    position: relative;
+}
+
+main h2.even-work {
+    position: absolute;
+    align-self: end;
+    font-size: 300%;
+    background-color: rgb(208, 226, 250);
+    border: 5px solid #222;
+    border-radius: 5px;
+}
+
+main section.odd-section {
+    display: flex;
+    align-items: center;
+    justify-content: left;
+    position: relative;
+}
+
+main h2.odd-work {
+    position: absolute;
+    align-self: end;
+    font-size: 300%;
+    background-color: rgb(208, 226, 250);
+    border: 5px solid #222;
+    border-radius: 5px;
 }
 
 form {
@@ -189,10 +249,20 @@ form button {
     cursor: pointer;
 }
 
-footer {
+footer section.contact{
+    display: flex;
+    justify-content: space-evenly;
+    padding: 20px 6%;
+}
+
+footer section.bottom {
     display: flex;
     justify-content: space-between;
-    padding: 20px 3%;
+    padding: 20px 6%;
+}
+
+footer a {
+    color: blue;
 }
 
 /* RESPONSIVE STYLES */
@@ -210,6 +280,10 @@ footer {
         max-width: 65%;
         margin-right: 0;
     }
+
+    main .main-section img {
+        max-width: 100%;
+    }
 }
 
 @media screen and (max-width: 500px) {
@@ -220,5 +294,8 @@ footer {
 
     figure .dog-image {
         max-width: 95%;
+    }
+    main .main-section img {
+        max-width: 100%;
     }
 }
